syntax = "proto3";
package aequitas.nftmarketplace.v1;

import "gogoproto/gogo.proto";
import "aequitas/nftmarketplace/v1/nftmarketplace.proto";

option go_package = "github.com/aequitas/aequitas/x/nftmarketplace/types";

// GenesisState defines the nftmarketplace module's genesis state
message GenesisState {
  MarketplaceParams params = 1 [(gogoproto.nullable) = false];
  repeated NFT nfts = 2 [(gogoproto.nullable) = false];
  repeated Collection collections = 3 [(gogoproto.nullable) = false];
  repeated Listing listings = 4 [(gogoproto.nullable) = false];
  repeated Sale sales = 5 [(gogoproto.nullable) = false];
  uint64 next_nft_id = 6;
  uint64 next_collection_id = 7;
  uint64 next_listing_id = 8;
  uint64 next_sale_id = 9;
}
